fix: patch for removing unwanted scrollbars on Windows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,7 +436,14 @@ span.data-value {
   display: flex;
   flex-wrap: nowrap;
   gap: 0.75rem;
-  overflow-x: hidden;
+  overflow-x: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#forecast::-webkit-scrollbar {
+  display: none;
 }
 
 #forecast .card {
